charts/ark-alfresco/alfresco-ss.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: alfresco
  name: &itemName activemq
  labels: &labels
    arkcase/component: alfresco.activemq
spec:
  replicas: 1
  selector:
    matchLabels:
      <<: *labels
  serviceName: *itemName
  template:
    metadata:
      labels:
        <<: *labels
    spec:
      imagePullSecrets:
        - name: aws-arkcase-pull
      containers:
        - name: activemq
          image: 345280441424.dkr.ecr.ap-south-1.amazonaws.com/ark_alfresco_activemq:5.17.1
          ports:
            - containerPort: 5672
            - containerPort: 8161
            - containerPort: 61613
            - containerPort: 61616
          resources:
            limits:
              memory: "1Gi"
      restartPolicy: Always
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: alfresco
  name: &itemName transform-router
  labels: &labels
    arkcase/component: alfresco.transform-router
spec:
  replicas: 1
  selector:
    matchLabels:
      <<: *labels
  serviceName: *itemName
  template:
    metadata:
      labels:
        <<: *labels
    spec:
      imagePullSecrets:
        - name: aws-arkcase-pull
      containers:
        - name: transform-router
          image: 345280441424.dkr.ecr.ap-south-1.amazonaws.com/alfresco_transform_router:2.0.0
          ports:
            - containerPort: 8095
          resources:
            limits:
              memory: "512Mi"
      restartPolicy: Always
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: alfresco
  name: &itemName transform-core-aio
  labels: &labels
    arkcase/component: alfresco.transform-core-aio
spec:
  replicas: 3
  selector:
    matchLabels:
      <<: *labels
  serviceName: *itemName
  template:
    metadata:
      labels:
        <<: *labels
    spec:
      imagePullSecrets:
        - name: aws-arkcase-pull
      containers:
        - name: transform-core-aio
          image: 345280441424.dkr.ecr.ap-south-1.amazonaws.com/alfresco_transform_core:3.0.0
          ports:
            - containerPort: 8090
          resources:
            limits:
              memory: "1536Mi"
      restartPolicy: Always
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: alfresco
  name: &itemName content
  labels: &labels
    arkcase/component: alfresco.content
spec:
  replicas: 1
  selector:
    matchLabels:
      <<: *labels
  serviceName: *itemName
  template:
    metadata:
      labels:
        <<: *labels
    spec:
      imagePullSecrets:
        - name: aws-arkcase-pull
      containers:
        - name: content
          image: 345280441424.dkr.ecr.ap-south-1.amazonaws.com/ark_alfresco_ee_content:7.3.1
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "2Gi"
#              volumeMounts:
#                - name: &contentRepository content-repository
#                  mountPath: "/usr/local/tomcat/alf_data"
#                - name: &licenseFile license-file
#                  mountPath: "/usr/local/tomcat/shared/classes/alfresco/extension/license/armedia.lic"
#          volumes:
#            - name: *contentRepository
#              hostPath:
#                path: /opt/app/alfresco/data/repo
#            - name: *licenseFile
#              hostPath:
#                path: /opt/app/alfresco/lib/armedia.lic
      restartPolicy: Always
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: alfresco
  name: &itemName share
  labels: &labels
    arkcase/component: alfresco.share
spec:
  replicas: 1
  selector:
    matchLabels:
      <<: *labels
  serviceName: *itemName
  template:
    metadata:
      labels:
        <<: *labels
    spec:
      imagePullSecrets:
        - name: aws-arkcase-pull
      containers:
        - name: share
          image: 345280441424.dkr.ecr.ap-south-1.amazonaws.com/ark_alfresco_ee_share:7.3.1
          resources:
            limits:
              memory: "1Gi"
      restartPolicy: Always
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: alfresco
  name: &itemName shared-file-store
  labels: &labels
    arkcase/component: alfresco.shared-file-store
spec:
  replicas: 1
  selector:
    matchLabels:
      <<: *labels
  serviceName: *itemName
  template:
    metadata:
      labels:
        <<: *labels
    spec:
      imagePullSecrets:
        - name: aws-arkcase-pull
      containers:
        - name: shared-file-store
          image: 345280441424.dkr.ecr.ap-south-1.amazonaws.com/ark_alfresco_fileshare:2.0.0
          ports:
            - containerPort: 8099
          resources:
            limits:
              memory: "512Mi"
#              volumeMounts:
#                - name: &sharedFileStore shared-file-store
#                  mountPath: /tmp/Alfresco
#          volumes:
#            - name: *sharedFileStore
#              hostPath:
#                path: /opt/app/alfresco/data/shared
      restartPolicy: Always
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: alfresco
  name: &itemName search
  labels: &labels
    arkcase/component: alfresco.shared-file-store
spec:
  replicas: 1
  selector:
    matchLabels:
      <<: *labels
  serviceName: *itemName
  selector:
    matchLabels:
      <<: *labels
  template:
    metadata:
      labels:
        <<: *labels
    spec:
      imagePullSecrets:
        - name: aws-arkcase-pull
      containers:
        - name: search
          image: 345280441424.dkr.ecr.ap-south-1.amazonaws.com/ark_alfresco_search:2.0.5
          ports:
            - containerPort: 8983
          resources:
            limits:
              memory: "2Gi"
      restartPolicy: Always
