charts/ark-alfresco/testvpc.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: efs-app
spec:
  containers:
    - name: app
      image: centos
      command: ["/bin/sh"]
      args: ["-c", "while true; do echo $(date -u) >> /out; sleep 1000; done"]
      volumeMounts:
        - name: persistent-storage
          mountPath: /
  volumes:
    - name: persistent-storage
      persistentVolumeClaim:
        claimName: efs-claim
