charts/ark-alfresco/alfresco-istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: alfresco-istio-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
  - port:
      number: 443
      name: https
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: alfresco-istio-gateway
spec:
  hosts:
  - "*"
  gateways:
  - alfresco-istio-gateway
  http:
  - match:
    - uri:
        prefix: /alfresco
    route:
    - destination:
        host: acs-alfresco-cs-repository
        port:
          number: 80
  - match:
    - uri:
        prefix: /share
    route:
    - destination:
        host: acs-alfresco-cs-share
        port:
          number: 80
  - match:
    - uri:
        prefix: /api-explorer
    route:
    - destination:
        host: acs-alfresco-cs-repository
        port:
          number: 80
